// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile/> render with default/require d props 1`] = `
<div
  className="tile "
/>
`;

exports[`<Tile/> render with optional props [::className] as "{{className}}" 1`] = `
<div
  className="tile {{className}}"
/>
`;

exports[`<Tile/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<div
  className="tile "
  data-cy="{{data-cy}}"
/>
`;
